# Trabalho-da-disciplina-de-Processamento-Digital-de-Imagens---Python

./: .breakpoints  README.md  codificar.py  decodificar.py  main.py  pyproject.toml  texto_entrada.txt
.cache/replit/: __replit_disk_meta.json
