[tool.poetry]
name = "shape-recogn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
imutils = "^0.5.3"
opencv-python = "^4.2"
scikit-image = "^0.19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
